discussion/kv_engine/164139/164139_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[cluster_test] Reuse the same set of memcached processes

Don't restart memcached per test batch, but just recreate
the test bucket for each test batch (starting and stopping
memcached is slow compared to the actual test execution)

Change-Id: I5e52c35c5897e992956ee2bd686a11bdd9af304d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-10-22 09:01:31.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-22 09:08:33.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35106/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35106/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41327/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41327/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16179/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16179/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15232/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14393/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15511/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15511/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3323/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3323/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23559/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23559/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13618/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/upgrade_test.h:23:16: error: member access into incomplete type "cb::test::Cluster" [clang-diagnostic-error]
        cluster->deleteBucket("default");
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/clustertest.h:22:7: note: forward declaration of "cb::test::Cluster"
class Cluster;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13618/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/upgrade_test.h:23:16:
error: member access into incomplete type "cb::test::Cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13618/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12417/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3253/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
